# chat-automation

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  chatgpt_results.csv  chatgpt_results.json  create_session.py  entrypoint.sh  main.py  pyproject.toml  test_prompts.csv
.github/workflows/: ci.yml
resources/prompts/: phones_moyo.csv  prompts.csv  test_prompts.csv
resources/result/: docker_test.json  run.json  test.json  test_output.json
resources/sessions/: llmheroai.json  rosklyar.json
results/: test_results.json
scripts/: create_session.py
src/: __init__.py  bot.py  bot_interface.py  create_session.py  http_api_prompt_provider.py  http_api_result_persister.py  io_utils.py  logging_config.py  models.py  prompt_provider.py  result_persister.py  session_provider.py  shutdown_handler.py
src/chatgpt/: __init__.py  auth.py  bot.py  citation_extractor.py
tests/: __init__.py  test_http_api_prompt_provider.py  test_http_api_result_persister.py  test_prompt_provider.py  test_result_persister.py  test_session.py  test_shutdown_handler.py
